[gd_scene load_steps=4 format=3 uid="uid://c8k2n02s5jlqp"]

[ext_resource type="Script" path="res://main.gd" id="1_wmsvq"]
[ext_resource type="PackedScene" uid="uid://du6lf4ukaq1py" path="res://level.tscn" id="3_rb4bq"]
[ext_resource type="PackedScene" uid="uid://dkrsdf01gkcvy" path="res://skill_check.tscn" id="9_i8ghx"]

[node name="Main" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_wmsvq")

[node name="SkillCheckLayer" type="CanvasLayer" parent="."]
visible = false

[node name="SkillCheck" parent="SkillCheckLayer" instance=ExtResource("9_i8ghx")]

[node name="Level" parent="." instance=ExtResource("3_rb4bq")]

[connection signal="skill_check_fail" from="SkillCheckLayer/SkillCheck" to="." method="skill_check_fail"]
[connection signal="skill_check_success" from="SkillCheckLayer/SkillCheck" to="." method="skill_check_success"]
[connection signal="check_wall_start" from="Level" to="." method="check_wall_start"]
[connection signal="fake_ledge_drop" from="Level" to="." method="fake_ledge_drop"]
